tryphon_macros/tests/ui/fail/multiple_defaults.stderr
error: You can define only one default attribute
 --> tests/ui/fail/multiple_defaults.rs:7:7
  |
7 |     #[default(3000)]
  |       ^^^^^^^
